--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,6 @@
         .cascadeSelect_activated {
             color: red;
         }
-
     </style>
 </head>
 
@@ -266,8 +265,8 @@
     window.newMobileSelect = new Picker({
         id: 'newMobileSelect',
         wheels: [
-            {data:['周日','周一','周二','周三','周四','周五','周六']},
-            {data:['08:00','09:00','10:00','11:00','12:00','13:00','14:00']}
+            { data: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'] },
+            { data: ['08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00'] }
         ],
         trigger: '#mobileselect',
         keyMap: { name: 'val', value: 'date', childs: 'childs' },
@@ -306,29 +305,65 @@
         wheels: [
             {
                 data: [
-                    { val: 0, date: '周日' },
-                    { val: 1, date: '周一' },
-                    { val: 2, date: '周二' },
-                    { val: 3, date: '周三' },
-                    { val: 4, date: '周四' },
-                    { val: 5, date: '周五' },
-                    { val: 6, date: '周六' }
-                ]
-            },
-            {
-                data: [
-                    { val: 8, date: '08:00' },
-                    { val: 9, date: '09:00' },
-                    { val: 10, date: '10:00' },
-                    { val: 11, date: '11:00' },
-                    { val: 12, date: '12:00' },
-                    { val: 13, date: '13:00' },
-                    { val: 14, date: '14:00' }
+                    {
+                        "val": "a",
+                        "date": "A",
+                        "childs": [
+                            {
+                                "val": "a-a",
+                                "date": "A-A",
+                                "childs": [
+                                    {
+                                        "val": "a-a-a",
+                                        "date": "A-A-A"
+                                    }
+                                ]
+                            },
+                            {
+                                "val": "a-b",
+                                "date": "A-B",
+                                "childs": [
+                                    {
+                                        "val": "a-b-a",
+                                        "date": "A-B-A"
+                                    },
+                                    {
+                                        "val": "a-b-b",
+                                        "date": "A-B-B"
+                                    }
+                                ]
+                            }
+                        ]
+                    }
                 ]
             }
         ],
+        // wheels: [
+        //     {
+        //         data: [
+        //             { val: 0, date: '周日' },
+        //             { val: 1, date: '周一' },
+        //             { val: 2, date: '周二' },
+        //             { val: 3, date: '周三' },
+        //             { val: 4, date: '周四' },
+        //             { val: 5, date: '周五' },
+        //             { val: 6, date: '周六' }
+        //         ]
+        //     },
+        //     {
+        //         data: [
+        //             { val: 8, date: '08:00' },
+        //             { val: 9, date: '09:00' },
+        //             { val: 10, date: '10:00' },
+        //             { val: 11, date: '11:00' },
+        //             { val: 12, date: '12:00' },
+        //             { val: 13, date: '13:00' },
+        //             { val: 14, date: '14:00' }
+        //         ]
+        //     }
+        // ],
         trigger: '#mobileselectjsontype',
-        keyMap: { name: 'val', value: 'date'},
+        keyMap: { name: 'val', value: 'date', childs: 'childs' },
         cancelBtnText: 'cancel',
         confirmBtnText: 'ensure',
         triggerDisplayData: true,
@@ -367,7 +402,7 @@
 
     window.cascadeSelect = new Picker({
         id: 'cascadeSelect',
-        wheels:msData,
+        wheels: msData,
         trigger: '#mobileselectcascade',
         keyMap: { name: 'val', value: 'date', childs: 'childs' },
         cancelBtnText: 'cancel',
