--- a/src/index.html
+++ b/src/index.html
@@ -305,63 +305,27 @@
         wheels: [
             {
                 data: [
-                    {
-                        "val": "a",
-                        "date": "A",
-                        "childs": [
-                            {
-                                "val": "a-a",
-                                "date": "A-A",
-                                "childs": [
-                                    {
-                                        "val": "a-a-a",
-                                        "date": "A-A-A"
-                                    }
-                                ]
-                            },
-                            {
-                                "val": "a-b",
-                                "date": "A-B",
-                                "childs": [
-                                    {
-                                        "val": "a-b-a",
-                                        "date": "A-B-A"
-                                    },
-                                    {
-                                        "val": "a-b-b",
-                                        "date": "A-B-B"
-                                    }
-                                ]
-                            }
-                        ]
-                    }
+                    { val: 0, date: '周日' },
+                    { val: 1, date: '周一' },
+                    { val: 2, date: '周二' },
+                    { val: 3, date: '周三' },
+                    { val: 4, date: '周四' },
+                    { val: 5, date: '周五' },
+                    { val: 6, date: '周六' }
+                ]
+            },
+            {
+                data: [
+                    { val: 8, date: '08:00' },
+                    { val: 9, date: '09:00' },
+                    { val: 10, date: '10:00' },
+                    { val: 11, date: '11:00' },
+                    { val: 12, date: '12:00' },
+                    { val: 13, date: '13:00' },
+                    { val: 14, date: '14:00' }
                 ]
             }
         ],
-        // wheels: [
-        //     {
-        //         data: [
-        //             { val: 0, date: '周日' },
-        //             { val: 1, date: '周一' },
-        //             { val: 2, date: '周二' },
-        //             { val: 3, date: '周三' },
-        //             { val: 4, date: '周四' },
-        //             { val: 5, date: '周五' },
-        //             { val: 6, date: '周六' }
-        //         ]
-        //     },
-        //     {
-        //         data: [
-        //             { val: 8, date: '08:00' },
-        //             { val: 9, date: '09:00' },
-        //             { val: 10, date: '10:00' },
-        //             { val: 11, date: '11:00' },
-        //             { val: 12, date: '12:00' },
-        //             { val: 13, date: '13:00' },
-        //             { val: 14, date: '14:00' }
-        //         ]
-        //     }
-        // ],
         trigger: '#mobileselectjsontype',
         keyMap: { name: 'val', value: 'date', childs: 'childs' },
         cancelBtnText: 'cancel',
